--- a/style_.css
+++ b/style_.css
@@ -1,13 +1,13 @@
 body 
 {
-    background-color: black;
+    background-color: #181a1b;
     color: azure;
 }
 
 #fileToUpload 
 {
     position: fixed;
-    top: 150px;
+    top: 150.8px;
     left: 10px;
     font-size: 30px;
     width: 494px;
@@ -51,10 +51,12 @@ body
     color :azure;
 }
 
-#videos
+a:link
 {
     position: fixed;
-    top: 277.5px;
+    text-align: center;
+    top:     237px;
+
     left: 10px;
     width: 494px;
     font-size: 30px;
@@ -63,16 +65,22 @@ body
     color :azure;
     padding: 3px;
     border: none;
+    text-decoration: none; 
 }
-#videos:hover 
+a:hover 
 {
     border: none;
     background: rgb(115, 0, 255); 
 }
+a:visited
+{
+    color :azure;
+    text-decoration: none;
+}
 #anamorphButton
 {
     position: fixed;
-    top: 237px;
+    top: 196.66px;
     left: 10px;
     font-size: 30px;
     width: 500px;
@@ -91,7 +99,8 @@ body
 #resetButton
 {
     position: fixed;
-    top: 318.5px;
+    top: 277.5px;
+    
     left: 10px;
     font-size: 20px;
     width: 500px;
@@ -110,9 +119,31 @@ body
 #header
 {
     position: fixed;
-    top: -97px;
+    top: -30px;
     left: 10px;
-    font-size: 70px;
+    
+    font-size: clamp(1rem, 10vw, 2rem);
     font-family: Arial, Helvetica, sans-serif;
     color: azure;
+}
+#changeLog
+{
+    position: fixed;
+    top: 570px;
+    left: 10px;
+    font-size: 30px;
+    font-family: Consolas,monaco,monospace; 
+    color: green;
+
+}
+#clText
+{
+    position: fixed;
+    top: 600px;
+    left: 10px;
+    font-size: 30px;
+    font-family: Consolas,monaco,monospace; 
+    color: green;
+
+
 }
