--- a/style_.css
+++ b/style_.css
@@ -129,7 +129,7 @@ a:visited
 #changeLog
 {
     position: fixed;
-    top: 570px;
+    top: 550px;
     left: 10px;
     font-size: 30px;
     font-family: Consolas,monaco,monospace; 
@@ -139,11 +139,29 @@ a:visited
 #clText
 {
     position: fixed;
-    top: 600px;
+    top: 580px;
     left: 10px;
     font-size: 30px;
     font-family: Consolas,monaco,monospace; 
     color: green;
 
 
+}
+#knownBugs
+{
+	position: fixed;
+	top: 670px;
+	left: 10px;
+	font-size: 30px;
+	font-family: Consolas,monaco,monospace;
+	color:red;
+}
+#kbText
+{
+        position: fixed;
+        top: 700px;
+        left: 10px;
+        font-size: 30px;
+        font-family: Consolas,monaco,monospace;
+        color:red;
 }
